--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@balkangraph/orgchart.js": "^7.6.17",
+    "@balkangraph/orgchart.js": "^7.6.26",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@reach/menu-button": "^0.12.1",
@@ -27,10 +27,11 @@
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!OrgChart)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,6 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "react-test-renderer": "^17.0.1"
   }
 }
