--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
@@ -27,7 +28,6 @@
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
